[package]
name = "server"
version = "0.1.0"
authors = ["Marco Amann <marco@pfudi.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.6.0"
hex = "0.4.2"
slab = "0.4.2"
mio-timerfd = "0.2.0"
num = "0.3.1"
ring = "0.16.19"
itertools = "0.9.0"
openssl = { version = "0.10", features = ["vendored"] }

[dependencies.mio]
version = "0.7"
features = ["tcp", "os-poll"]
